<resources>
    <string name="app_name">Teamwise</string>
    <string name="mapbox_access_token">
        sk.eyJ1IjoiZGFuc2gxbnYiLCJhIjoiY2toZjdqNXZpMGY2dzJ6bHVydGg2czZ4aiJ9.691C_kflDclczP_2dFAEeA
    </string>
    <string name="logo_content_description">Teamwise Logo</string>
    <string name="vk_access_token">pqib0o8FUCObvQBLehrI</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">3vUOUKkN4abdEy9ijyiU1HfNSYdPgb66YF7txDtf</string>
    <string name="back4app_client_key">8Tt8mtxYAMGOqVPh6XYLbSayXGsgVCBQ1x3yFypD</string>

    <!--Menu-->
    <string name="menu_profile">Профиль</string>
    <string name="menu_chat">Чат</string>
    <string name="menu_addition">Новое</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_information">Лента</string>

    <!--Addition Fragment-->
    <string name="addition_label_information">Чтобы пригласить участников, опишите свое мероприятие, добавьте фотографии и разместите у себя в ленте</string>
    <string name="addition_date">Введите дату</string>
    <string name="addition_description">Описание</string>
    <string name="addition_name">Название</string>
    <string name="addition_photo_inform">Добавить фото (максимум 5)</string>
    <string name="addition_button_create">Создать</string>
    <string name="addition_tags">Теги</string>
    <string name="addition_tag_hint">Добавьте теги</string>
    <!---->

    <!--Profile Fragment-->
    <string name="profile_city">New York</string>
    <string name="profile_login">Mattway_New</string>
    <string name="profile_name">Виктор</string>
    <string name="profile_description">Я обычный человек с обычными мыслями и жизнь прожил самую обыкновенную.
        Мне не поставят памятник, имя мое скоро забудется, и все же я познал любовь, и мне этого достаточно.</string>
    <string name="profile_subscriber">Подписчики</string>
    <string name="profile_subscription">Подписки</string>
    <string name="profile_member">Участник</string>
    <string name="profile_organizer">Организатор</string>
    <string name="profile_count_subscriber">181</string>
    <string name="profile_count_subscription">181</string>
    <string name="profile_count_member">181</string>
    <string name="profile_count_organizer">181</string>
    <string name="profile_button_subscribe">Подписаться</string>
    <string name="profile_tab_organizer">Организатор</string>
    <string name="profile_tab_member">Участник</string>
    <!--Item Information-->
    <string name="item_information_creator">Создал</string>
    <string name="item_information_creator_name">Андрей Антонов</string>
    <string name="item_information_description">На бесплатном уроке гости узнают о прибыльной профессии «Тестировщик ПО», примут…</string>
    <string name="item_information_button">Принять участие</string>
    <string name="item_information_name">Бесплатные практические уроки «Как за 1 месяц овладеть профессией „Тестировщик ПО“»</string>
    <!---->

    <!--Basic user location permission toasts-->
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <!---->

    <string name="search_find_interesting">Интересное рядом</string>
    <!---->

    <string name="reg_button">Создать аккаунт</string>
    <string name="auth_button">Войти</string>
    <string name="tw_hint_password">Пароль</string>
    <string name="tw_hint_username">Имя пользователя</string>
    <string name="tw_button_back">Назад</string>
    <string name="tw_button_auth">Войти</string>
    <string name="tw_button_reg">Регистрация</string>
    <string name="registration_email">Эл.почта</string>
    <string name="registration_userinfo">Имя и фамилия</string>
    <string name="information_emptylist">Список событий пуст</string>
    <string name="chatroom_emptylist">Список чатов пуст</string>
    <string name="chat_fragment">Chat FRAGMENT</string>
    <!---->

</resources>
