<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/informationFragment"
        android:icon="@drawable/ic_information"
        android:title="@string/menu_information"
        app:showAsAction="always" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/additionFragment"
        android:icon="@drawable/ic_addition"
        android:title="@string/menu_addition"
        app:showAsAction="always" />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_chat"
        app:showAsAction="always" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/menu_profile"
        app:showAsAction="always" />

</menu>