<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.profile.ProfileFragment">

    <data>

        <variable
            name="vm"
            type="com.vladimir.teamwise.feature.profile.ProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Profile Information-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintBottom_toTopOf="@id/profile_description"
                    app:layout_constraintEnd_toStartOf="@id/profile_user_information"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/profile_user_information"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/profile_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/profile_image"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/profile_name"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/profile_login" />

                    <TextView
                        android:id="@+id/profile_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/profile_city" />
                </LinearLayout>

                <TextView
                    android:id="@+id/profile_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/profile_description"
                    app:layout_constraintBottom_toTopOf="@id/profile_subscribe_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_user_information" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/profile_subscribe_button"
                    style="@style/Widget.Teamwise.Button.TextButton.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/profile_button_subscribe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_description" />

                <!--Profile Sub_Information-->

                <LinearLayout
                    android:id="@+id/profile_sub_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_subscribe_button">

                    <LinearLayout
                        android:id="@+id/container_organizer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/profile_count_organizer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:text="@string/profile_count_organizer"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/profile_organizer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:text="@string/profile_organizer"
                            android:textSize="@dimen/sub_inform_text_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/container_member"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/profile_count_member"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:text="@string/profile_count_member"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/profile_member"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:text="@string/profile_member"
                            android:textSize="@dimen/sub_inform_text_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/container_subscription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/profile_count_subscription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:text="@string/profile_count_subscription"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/profile_subscription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:text="@string/profile_subscription"
                            android:textSize="@dimen/sub_inform_text_size" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/container_subscriber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/profile_count_subscriber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:text="@string/profile_count_subscriber"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/profile_subscriber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:text="@string/profile_subscriber"
                            android:textSize="@dimen/sub_inform_text_size" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.tabs.TabLayout
            style="@style/Widget.MaterialComponents.TabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/profile_tab_organizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_tab_organizer" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/profile_tab_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_tab_member" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_event_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            tools:itemCount="4"
            tools:layoutManager="GridLayoutManager"
            tools:listitem="@layout/item_profile_event_image"
            tools:spanCount="2" />

    </LinearLayout>
</layout>